# pyshiningrgb

./: .cruft.json  CLAUDE.md  README.md  flake.nix  pyproject.toml
src/pyshiningrgb/: __init__.py  _cli.py  builders.py  client.py  protocol.py  semantic.py
src/pyshiningrgb/tools/: __init__.py  analyze.py  check_capture.py  merge_captures.py  replay.py  replay_flow.py
tests/: test_module.py
