[project]
name = "pyshiningrgb"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "construct>=2.10.70",
]

[project.scripts]
pyshiningrgb = "pyshiningrgb._cli:main"

[project.optional-dependencies]
cli = [
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cruft[pyproject]>=2.16.0",
    "mypy>=1.16.1",
    "myst-parser>=4.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "scapy>=2.6.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
]

[tool.coverage]
html.directory = "docs/generated/coverage"
report.show_missing = true
run.source_pkgs = [ "pyshiningrgb" ]
run.branch = true
xml.output = "docs/generated/coverage/coverage.xml"

[tool.cruft]
skip = [ ".git", "tests" ]

[tool.mypy]
check_untyped_defs = true
files = [ "src", "tests" ]
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report xml"
testpaths = [ "tests" ]

[tool.ruff]
line-length = 99
src = [ "src", "tests" ]

[tool.ruff.lint.isort]
combine-as-imports = true
